update jquery version

--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="css/style.css"/>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script src="js/script.js"></script>
-  </head>
-  <body>
-    <header id="header">
-      <div id="title">
-          <h1>Kent McKinney</h1>
-          <h2>Software Development Portfolio</h2>
-      </div>
-      <nav id="navbar">
-        <!-- <span id="menu"> -->
-          <ul>
-            <li><a href="#welcome">Welcome</a></li>
-            <li><a href="#c-sharp">C#</a></li>
-            <li><a href="#javascript">Javascript</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
-        <!-- </span> -->
-      </nav>
-    </header>
-    <main>
-      <section id="c-sharp">
-        <h2>C#</h2>
-        <article>
-          Lorem ipsum dolor sit amet
-        </article>
-      </section>
-      <section id="javascript">
-        <h2>Javascript</h2>
-        <article class="project-tile">
-          <a href="">Project</a>
-          Lorem ipsum dolor sit amet
-        </article>
-      </section>
-      <section id="about">
-        <h2>About</h2>
-        <article class="project-tile">
-          <a href="">Project</a>
-          Lorem ipsum dolor sit amet
-        </article>
-      </section>    
-      <section id="welcome">
-        <h2>Welcome</h2>
-        <article class="project-tile">
-          <a href="">Project</a>
-          Lorem ipsum dolor sit amet
-        </article>
-      </section>    
-      <footer>
-        <a id="profile-link" href="https://github.com" target="_blank"></a>
-      </footer>
-    </main>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="js/script.js"></script>
+</head>
+
+<body>
+  <header id="header">
+    <div id="title">
+      <h1>Kent McKinney</h1>
+      <h2>Software Development Portfolio</h2>
+    </div>
+    <nav id="navbar">
+      <!-- <span id="menu"> -->
+      <ul>
+        <li><a href="#welcome">Welcome</a></li>
+        <li><a href="#c-sharp">C#</a></li>
+        <li><a href="#javascript">Javascript</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+      <!-- </span> -->
+    </nav>
+  </header>
+  <main>
+    <section id="c-sharp">
+      <h2>C#</h2>
+      <article>
+        Lorem ipsum dolor sit amet
+      </article>
+    </section>
+    <section id="javascript">
+      <h2>Javascript</h2>
+      <article class="project-tile">
+        <a href="">Project</a>
+        Lorem ipsum dolor sit amet
+      </article>
+    </section>
+    <section id="about">
+      <h2>About</h2>
+      <article class="project-tile">
+        <a href="">Project</a>
+        Lorem ipsum dolor sit amet
+      </article>
+    </section>
+    <section id="welcome">
+      <h2>Welcome</h2>
+      <article class="project-tile">
+        <a href="">Project</a>
+        Lorem ipsum dolor sit amet
+      </article>
+    </section>
+    <footer>
+      <a id="profile-link" href="https://github.com" target="_blank"></a>
+    </footer>
+  </main>
+</body>
+
 </html>
